--- a/public/app/transaction/transaction-input.component.html
+++ b/public/app/transaction/transaction-input.component.html
@@ -1,39 +1,48 @@
 <transaction-relay #relay></transaction-relay>
 <div class="card card-block">
-  <form class="form-inline">
+  <form class="form-inline" #tnxForm="ngForm">
+    <div class="form-group">
+      <label for="accId">Account</label>
+      <ng2-completer id="autoAccId" name="autoAccId" inputClass="form-control form-control-sm"
+                     [(ngModel)]="accountSearchStr" [dataService]="accDataService$|async"
+                     [minSearchLength]="0" #autoAccId="ngModel"
+                     (selected)="tnx.accountId = $event?.originalObject?.id()"></ng2-completer>
+      <input [hidden]="true" type="text" id="accId" name="accId"
+             #accId="ngModel" required
+             [(ngModel)]="tnx.accountId">
+    </div>
     <div class="form-group">
       <label for="date">Date</label>
       <input type="date" class="form-control form-control-sm" id="date" name="date"
              [value]="tnx.date|date:'yyyy-MM-dd'"
              (input)="tnx.date=parseDate($event.target.value)"
-             (keyup.enter)="save()">
+             (keyup.enter)="tnxForm.form.valid && save()">
     </div>
     <div class="form-group">
       <label for="desc">Description</label>
       <input type="text" class="form-control form-control-sm" id="desc" name="desc"
-             [(ngModel)]="tnx.description" (keyup.enter)="save()">
+             [(ngModel)]="tnx.description" (keyup.enter)="tnxForm.form.valid && save()">
     </div>
     <div class="form-group">
       <label for="amount">Amount</label>
-      <input type="text" class="form-control form-control-sm" id="amount" name="amount"
-             [(ngModel)]="tnx.amount" (keyup.enter)="save()">
-    </div>
-    <div class="form-group">
-      <label for="accId">Account id</label>
-      <input type="text" class="form-control form-control-sm" id="accId" name="accId"
-             [(ngModel)]="tnx.accountId" (keyup.enter)="save()">
+      <input type="text" class="form-control form-control-sm" size="8"
+             id="amount" name="amount"
+             [(ngModel)]="tnx.amount" (keyup.enter)="tnxForm.form.valid && save()">
     </div>
     <div class="form-group">
       <label>&nbsp;</label>
-      <button class="btn btn-primary btn-sm" type="button"
-              (click)="save()">Save
-      </button>
-      <button class="btn btn-primary btn-sm" type="button"
-              (click)="update()">Update
+      <button class="btn btn-primary btn-sm {{tnxForm.form.valid?'':'disabled'}}" type="button"
+              (click)="tnxForm.form.valid && save()">Save
       </button>
       <button class="btn btn-danger btn-sm" type="button"
               (click)="reset()">Reset
       </button>
     </div>
   </form>
+  <div *ngIf="accId.errors && (tnxForm.form.dirty || tnxForm.form.touched)"
+       class="alert alert-danger">
+    <div [hidden]="!accId.errors.required">
+      Account is required
+    </div>
+  </div>
 </div>
